@@ -1,3 +1,10 @@
+Fri May 29 13:30:19 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
+    * unittests/test_search.php,
+    * unittests/test_docs.php,
+    * flax/flaxsearch.php,
+    * flax/flaxclient.php: Implemented search results classes and 
+      updated tests.
+
 Fri May 29 11:45:07 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
     * flax/flaxclient.php,
     * flax/flaxfield.php: Moved flaxFieldFromJSON into FlaxField class.
